; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_database.c_create_diff_row_query.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_database.c_create_diff_row_query.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@create_diff_row_query.keyset = internal constant [15 x i8] c"`%s` = %s AND \00", align 1
@create_diff_row_query.lastkeyset = internal constant [11 x i8] c"`%s` = %s \00", align 1
@create_diff_row_query.fmt = internal constant [28 x i8] c"SELECT * FROM `%s` WHERE %s\00", align 16
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i32*, i8*, %struct.TYPE_7__*)* @create_diff_row_query to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @create_diff_row_query(i32* %0, i32* %1, i8* %2, %struct.TYPE_7__* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_7__*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca %struct.TYPE_7__*, align 8
  %18 = alloca i64, align 8
  %19 = alloca i64, align 8
  %20 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i8* %2, i8** %8, align 8
  store %struct.TYPE_7__* %3, %struct.TYPE_7__** %9, align 8
  store i8* null, i8** %10, align 8
  store i8* null, i8** %11, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = load i8*, i8** %8, align 8
  %23 = call i64 @MSI_DatabaseGetPrimaryKeys(i32* %21, i8* %22, %struct.TYPE_7__** %17)
  store i64 %23, i64* %18, align 8
  %24 = load i64, i64* %18, align 8
  %25 = load i64, i64* @ERROR_SUCCESS, align 8
  %26 = icmp ne i64 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %4
  store i8* null, i8** %5, align 8
  br label %121

28:                                               ; preds = %4
  %29 = call i8* @msi_alloc_zero(i32 1)
  store i8* %29, i8** %11, align 8
  %30 = load i8*, i8** %11, align 8
  %31 = icmp ne i8* %30, null
  br i1 %31, label %33, label %32

32:                                               ; preds = %28
  br label %114

33:                                               ; preds = %28
  store i32 1, i32* %15, align 4
  %34 = load %struct.TYPE_7__*, %struct.TYPE_7__** %17, align 8
  %35 = call i64 @MSI_RecordGetFieldCount(%struct.TYPE_7__* %34)
  store i64 %35, i64* %20, align 8
  store i64 1, i64* %19, align 8
  br label %36

36:                                               ; preds = %89, %33
  %37 = load i64, i64* %19, align 8
  %38 = load i64, i64* %20, align 8
  %39 = icmp sle i64 %37, %38
  br i1 %39, label %40, label %92

40:                                               ; preds = %36
  %41 = load %struct.TYPE_7__*, %struct.TYPE_7__** %17, align 8
  %42 = load i64, i64* %19, align 8
  %43 = call i8* @MSI_RecordGetString(%struct.TYPE_7__* %41, i64 %42)
  store i8* %43, i8** %14, align 8
  %44 = load i32*, i32** %7, align 8
  %45 = load i8*, i8** %14, align 8
  %46 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %47 = call i8* @get_key_value(i32* %44, i8* %45, %struct.TYPE_7__* %46)
  store i8* %47, i8** %12, align 8
  %48 = load i64, i64* %19, align 8
  %49 = load i64, i64* %20, align 8
  %50 = icmp eq i64 %48, %49
  br i1 %50, label %51, label %52

51:                                               ; preds = %40
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @create_diff_row_query.lastkeyset, i64 0, i64 0), i8** %13, align 8
  br label %53

52:                                               ; preds = %40
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @create_diff_row_query.keyset, i64 0, i64 0), i8** %13, align 8
  br label %53

53:                                               ; preds = %52, %51
  %54 = load i32, i32* %15, align 4
  store i32 %54, i32* %16, align 4
  %55 = load i8*, i8** %13, align 8
  %56 = call i32 @lstrlenW(i8* %55)
  %57 = load i8*, i8** %14, align 8
  %58 = call i32 @lstrlenW(i8* %57)
  %59 = add nsw i32 %56, %58
  %60 = load i8*, i8** %12, align 8
  %61 = call i32 @lstrlenW(i8* %60)
  %62 = add nsw i32 %59, %61
  %63 = sub nsw i32 %62, 4
  %64 = load i32, i32* %15, align 4
  %65 = add nsw i32 %64, %63
  store i32 %65, i32* %15, align 4
  %66 = load i8*, i8** %11, align 8
  %67 = load i32, i32* %15, align 4
  %68 = sext i32 %67 to i64
  %69 = mul i64 %68, 1
  %70 = trunc i64 %69 to i32
  %71 = call i8* @msi_realloc(i8* %66, i32 %70)
  store i8* %71, i8** %11, align 8
  %72 = load i8*, i8** %11, align 8
  %73 = icmp ne i8* %72, null
  br i1 %73, label %77, label %74

74:                                               ; preds = %53
  %75 = load i8*, i8** %12, align 8
  %76 = call i32 @msi_free(i8* %75)
  br label %114

77:                                               ; preds = %53
  %78 = load i8*, i8** %11, align 8
  %79 = load i32, i32* %16, align 4
  %80 = sext i32 %79 to i64
  %81 = getelementptr inbounds i8, i8* %78, i64 %80
  %82 = getelementptr inbounds i8, i8* %81, i64 -1
  %83 = load i8*, i8** %13, align 8
  %84 = load i8*, i8** %14, align 8
  %85 = load i8*, i8** %12, align 8
  %86 = call i32 @sprintfW(i8* %82, i8* %83, i8* %84, i8* %85)
  %87 = load i8*, i8** %12, align 8
  %88 = call i32 @msi_free(i8* %87)
  br label %89

89:                                               ; preds = %77
  %90 = load i64, i64* %19, align 8
  %91 = add nsw i64 %90, 1
  store i64 %91, i64* %19, align 8
  br label %36

92:                                               ; preds = %36
  %93 = call i32 @lstrlenW(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @create_diff_row_query.fmt, i64 0, i64 0))
  %94 = load i8*, i8** %8, align 8
  %95 = call i32 @lstrlenW(i8* %94)
  %96 = add nsw i32 %93, %95
  %97 = load i8*, i8** %11, align 8
  %98 = call i32 @lstrlenW(i8* %97)
  %99 = add nsw i32 %96, %98
  %100 = add nsw i32 %99, 1
  store i32 %100, i32* %15, align 4
  %101 = load i32, i32* %15, align 4
  %102 = sext i32 %101 to i64
  %103 = mul i64 %102, 1
  %104 = trunc i64 %103 to i32
  %105 = call i8* @msi_alloc(i32 %104)
  store i8* %105, i8** %10, align 8
  %106 = load i8*, i8** %10, align 8
  %107 = icmp ne i8* %106, null
  br i1 %107, label %109, label %108

108:                                              ; preds = %92
  br label %114

109:                                              ; preds = %92
  %110 = load i8*, i8** %10, align 8
  %111 = load i8*, i8** %8, align 8
  %112 = load i8*, i8** %11, align 8
  %113 = call i32 @sprintfW(i8* %110, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @create_diff_row_query.fmt, i64 0, i64 0), i8* %111, i8* %112)
  br label %114

114:                                              ; preds = %109, %108, %74, %32
  %115 = load i8*, i8** %11, align 8
  %116 = call i32 @msi_free(i8* %115)
  %117 = load %struct.TYPE_7__*, %struct.TYPE_7__** %17, align 8
  %118 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %117, i32 0, i32 0
  %119 = call i32 @msiobj_release(i32* %118)
  %120 = load i8*, i8** %10, align 8
  store i8* %120, i8** %5, align 8
  br label %121

121:                                              ; preds = %114, %27
  %122 = load i8*, i8** %5, align 8
  ret i8* %122
}

declare dso_local i64 @MSI_DatabaseGetPrimaryKeys(i32*, i8*, %struct.TYPE_7__**) #1

declare dso_local i8* @msi_alloc_zero(i32) #1

declare dso_local i64 @MSI_RecordGetFieldCount(%struct.TYPE_7__*) #1

declare dso_local i8* @MSI_RecordGetString(%struct.TYPE_7__*, i64) #1

declare dso_local i8* @get_key_value(i32*, i8*, %struct.TYPE_7__*) #1

declare dso_local i32 @lstrlenW(i8*) #1

declare dso_local i8* @msi_realloc(i8*, i32) #1

declare dso_local i32 @msi_free(i8*) #1

declare dso_local i32 @sprintfW(i8*, i8*, i8*, i8*) #1

declare dso_local i8* @msi_alloc(i32) #1

declare dso_local i32 @msiobj_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
